2004-02-14  Michael Neuhauser  <mike@firmix.at>

	* base/arch/arm/hal.*: define rt_scheduling[] unconditionally, i.e.
	not depending on CONFIG_RTAI_SCHED_ISR_LOCK

2004-02-14  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/asm-arm/rtai_use.h: added the new arch specific USI.
	* base/arch/i386/hal.*: modified deferred scheduling in interrupt 
	  handlers to avoid too many indirections, related variables
	  declared here instead than in sched.c.
	* base/arch/arm/hal.*: modified deferred scheduling in interrupt 
	  handlers to avoid too many indirections, as in i386.
	* base/sched/sched.*: sched locking variables from hal.c, added
	  hook for deferred scheduling in isr.
	* base/sched/api.c: removed hook for deferred scheduling in isr.

2004-02-06  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/rtai_use.h: reworked to use srq instead of LXRT for
	  calling USI related services, so that they do not depend from the
	  scheduler anymore.
	* base/include/asm/rtai_use.h: added the new arch specific USI 
	  support, so that it should be easy to have USI on non x86 also.
	* base/arch/i386/hal.*: user space syscall extended to support USI 
	* base/tasklets.c: ensure interrupt are enabled at exiting the support
	  tasklet thread.
	* base/usi/README: updated to the new USI setup; this is the only
	  file of interest; the rest of all the usi directory content is of
	  no use anymore.

2004-02-04  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/scripts/rtai_load.in: extended to allow to execute an 
	  application with a user command list.

2004-01-31  Michael Neuhauser  <mike@firmix.at>

	* base/arch/arm/patches/ep9301_hal17_2.4.21-rmk1-crus1.4.2.patch:
	new Adeos patch, replaces ep9301_hal16_2.4.21-rmk1-crus1.4.2.patch;
	see ep9301_hal17_2.4.21-rmk1-crus1.4.2.ChangeLog for changes (short
	summary: the new version (r17c1) is a lot better than the previous
	version (r16c255))
	* base/arch/arm/hal/hal.{c,immed,piped}: align rtai_realtime_irq[]